removed theme and extra mode

--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,7 @@
     <nav id="navbar">
 
         <div id="menu-container">
-
-            <!--<input type="checkbox" id="toggle" class="toggle&#45;&#45;checkbox">
-            <label for="toggle" id="toggle&#45;&#45;label" class="toggle&#45;&#45;label">
-                <span class="toggle&#45;&#45;label-background"></span>
-            </label>
-            <div class="background"></div>-->
-
-            <input id="toggle-button"  class="day" type="button" >
+<!--            <input id="toggle-button"  class="day" type="button" >-->
         </div>
 
         <div id="navbar-container">
