--- a/public/play.html
+++ b/public/play.html
@@ -16,15 +16,13 @@
     <script type="text/javascript" src="./js/settings.js"></script>
 
 </head>
-<body>
-
-
+<body >
 
 <!--  NAV BAR  -->
 <nav id="navbar">
 
     <div id="menu-container">
-        <input id="toggle-button"  class="day" type="button" >
+<!--        <input id="toggle-button"  class="day" type="button" >-->
     </div>
 
     <div id="navbar-container">
@@ -119,9 +117,9 @@
         </ul>
     </div>
 
-    <div class="settings-modes-div">
+<!--    <div class="settings-modes-div">
 
-        <!--            <label for="touch">-->
+        &lt;!&ndash;            <label for="touch">&ndash;&gt;
         <span class="settings-box-title">
                 <span class="settings-mode">Extra Game Mode</span>
                 <span id="settings-extra-game-mode">
@@ -129,8 +127,8 @@
                     <i class="fa-solid fa-earth-europe"></i>
                 </span>
             </span>
-        <!--            </label>-->
-        <input type="checkbox" ><!--id="touch"-->
+        &lt;!&ndash;            </label>&ndash;&gt;
+        <input type="checkbox" >&lt;!&ndash;id="touch"&ndash;&gt;
 
         <ul id="extra-game-modes-ul" class="slide">
             <li onclick="changeText(this)">
@@ -142,7 +140,7 @@
                 <i class="fa-solid fa-circle-xmark"></i>
             </li>
         </ul>
-    </div>
+    </div>-->
 <!--    <div class="settings-modes-div">
 
             <span class="settings-box-title">
