--- a/public/play.html
+++ b/public/play.html
@@ -22,14 +22,13 @@
 <nav id="navbar">
 
     <div id="menu-container">
-<!--        <input id="toggle-button"  class="day" type="button" >-->
+        <!--        <input id="toggle-button"  class="day" type="button" >-->
     </div>
 
     <div id="navbar-container">
         <ul id="nav-menu">
             <li class="nav-items" onclick="window.location ='/'">Home</li>
             <li class="nav-items" onclick="window.location ='/'">About</li>
-            <li class="nav-items" onclick="window.location ='/'">Contact</li>
         </ul>
     </div>
 
@@ -39,50 +38,50 @@
 <!-- SETTINGS -->
 <section id="settings-box" class="settings-box">
 
-<!--    <div class="settings-modes-div" >
+    <!--    <div class="settings-modes-div" >
 
-        &lt;!&ndash;            <label for="touch">&ndash;&gt;
-        <span class="settings-box-title">
-                <span class="settings-mode">Difficulty</span>
-                <span id="settings-difficulty">
+            &lt;!&ndash;            <label for="touch">&ndash;&gt;
+            <span class="settings-box-title">
+                    <span class="settings-mode">Difficulty</span>
+                    <span id="settings-difficulty">
+                        <span>Easy | 3 Hints</span>
+                        <span>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </span>
+                    </span>
+                </span>
+            &lt;!&ndash;            </label>&ndash;&gt;
+            <input type="checkbox" >&lt;!&ndash;id="touch"&ndash;&gt;
+
+            <ul id="difficulty-ul" class="slide">
+                <li value="0" onclick="changeText(this)">
                     <span>Easy | 3 Hints</span>
-                    <span>
+                    <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-regular fa-star"></i>
                         <i class="fa-regular fa-star"></i>
-                    </span>
-                </span>
-            </span>
-        &lt;!&ndash;            </label>&ndash;&gt;
-        <input type="checkbox" >&lt;!&ndash;id="touch"&ndash;&gt;
-
-        <ul id="difficulty-ul" class="slide">
-            <li value="0" onclick="changeText(this)">
-                <span>Easy | 3 Hints</span>
-                <div>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </div>
-            </li>
-            <li value="1" onclick="changeText(this)">
-                <span>Medium | 2 Hints</span>
-                <div>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </div>
-            </li>
-            <li value="2" onclick="changeText(this)">
-                <span>Hard | 1 Hint</span>
-                <div>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-            </li>
-        </ul>
-    </div>-->
+                    </div>
+                </li>
+                <li value="1" onclick="changeText(this)">
+                    <span>Medium | 2 Hints</span>
+                    <div>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                </li>
+                <li value="2" onclick="changeText(this)">
+                    <span>Hard | 1 Hint</span>
+                    <div>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </li>
+            </ul>
+        </div>-->
 
     <div class="settings-modes-div">
 
@@ -101,25 +100,29 @@
             <li onclick="changeText(this)">
                 <span>Hints</span>
                 <i title="guess the country with limited hints" class="fa-solid fa-magnifying-glass"></i>
+                <span class="hide settings-info">Find Waldo with limited facts about the country</span>
             </li>
             <li onclick="changeText(this)">
                 <span>Flags</span>
                 <i class="fa-solid fa-flag"></i>
+                <span class="hide settings-info">Find Waldo with the country's flag</span>
             </li>
             <li onclick="changeText(this)">
                 <span>Countries</span>
                 <i class="fa-solid fa-earth-americas"></i>
+                <span class="hide settings-info">Find Waldo with his given location</span>
             </li>
             <li onclick="changeText(this)">
                 <span>Capitals</span>
                 <i class="fa-solid fa-building-columns"></i>
+                <span class="hide settings-info">Find Waldo with the country's given capital</span>
             </li>
         </ul>
     </div>
 
-<!--    <div class="settings-modes-div">
+    <div class="settings-modes-div">
 
-        &lt;!&ndash;            <label for="touch">&ndash;&gt;
+        <!--            <label for="touch">-->
         <span class="settings-box-title">
                 <span class="settings-mode">Extra Game Mode</span>
                 <span id="settings-extra-game-mode">
@@ -127,21 +130,24 @@
                     <i class="fa-solid fa-earth-europe"></i>
                 </span>
             </span>
-        &lt;!&ndash;            </label>&ndash;&gt;
-        <input type="checkbox" >&lt;!&ndash;id="touch"&ndash;&gt;
+        <!--            </label>-->
+        <input type="checkbox" ><!--id="touch"-->
 
         <ul id="extra-game-modes-ul" class="slide">
             <li onclick="changeText(this)">
                 <span>Regular</span>
                 <i class="fa-solid fa-earth-europe"></i>
+                <span class="hide settings-info">Waldo's previous location(s) stays on the globe after finding him</span>
+<!--                <span class="hide settings-info">Find Waldo with the country's given capital</span>-->
             </li>
             <li onclick="changeText(this)">
                 <span>Elimination</span>
                 <i class="fa-solid fa-circle-xmark"></i>
+                <span class="hide settings-info">Waldo's previous location(s) is removed from the globe after finding him</span>
             </li>
         </ul>
-    </div>-->
-<!--    <div class="settings-modes-div">
+    </div>
+    <div class="settings-modes-div">
 
             <span class="settings-box-title">
                 <span class="settings-mode">Country Count</span>
@@ -149,9 +155,8 @@
                 <span id="country-count-message"></span>
             </span>
 
-    </div>-->
-
-
+    </div>
+    
 </section>
 
 
@@ -159,40 +164,40 @@
 <!-- HINTS -->
 <div id="hints-container" class="hints-container hide no-pointer-event" >
 
-  <div id="hints-header" class="no-pointer-event">
+    <div id="hints-header" class="no-pointer-event">
 
-    <div id="title-buttons-div" class="no-pointer-event">
+        <div id="title-buttons-div" class="no-pointer-event">
 
 
-      <h2 id="location-title-h2">
-        Waldo's Last Known Location
-      </h2>
+            <h2 id="location-title-h2">
+                Waldo's Last Known Location
+            </h2>
 
-      <div id="previous-next-button">
-          <input id="previous-button" class="btn previous-button visibilityHidden" type="button" value="Previous"  />
-          <input id="next-button" class="btn next-button" type="button" value="Next"  />
-          <input id="end-button" class="btn end-button" type="button" value="End"  onclick="window.location ='/play'" />
-      </div>
+            <div id="previous-next-button">
+                <input id="previous-button" class="btn previous-button visibilityHidden" type="button" value="Previous"  />
+                <input id="next-button" class="btn next-button" type="button" value="Next"  />
+                <input id="end-button" class="btn end-button" type="button" value="End"  onclick="window.location ='/play'" />
+            </div>
+
+        </div>
+
+
+        <div id="show-hints" class="no-pointer-event">
+
+            <input id="get-hint-button" class="btn" type="button" value="Get Hint">
+            <input id="next-round-button" class="btn hide" type="button" value="">
+
+            <div id="remaining-div">
+                <div class="" id="remaining-hints-div"> Remaining Hints : <span id="remaining-hints-count"></span></div>
+                <div id="remaining-countries-div"> Remaining Countries : <span id="remaining-countries-count"></span> </div>
+            </div>
+
+        </div>
 
     </div>
 
 
-    <div id="show-hints" class="no-pointer-event">
-
-      <input id="get-hint-button" class="btn" type="button" value="Get Hint">
-      <input id="next-round-button" class="btn hide" type="button" value="Get">
-
-      <div id="remaining-div">
-        <div class="" id="remaining-hints-div"> Remaining Hints : <span id="remaining-hints-count"></span></div>
-        <div id="remaining-countries-div"> Remaining Countries : <span id="remaining-countries-count"></span> </div>
-      </div>
-
-    </div>
-
-  </div>
-
-
-  <div id="hints-div"> </div>
+    <div id="hints-div"> </div>
 
 </div>
 
