project currenlty published and version working

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Where on Earth is Waldo?</title>
 
    <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -28,7 +28,7 @@
         <div id="navbar-container">
             <ul id="nav-menu">
                 <li class="nav-items" onclick="window.location ='/'">Home</li>
-                <li class="nav-items" onclick="window.location ='/'">About</li>
+                <li class="nav-items" onclick="window.location ='/about'">About</li>
             </ul>
         </div>
 
