--- a/public/play.html
+++ b/public/play.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Where on Earth is Waldo?</title>
+    <title>Where on Earth is Waldo? | Play</title>
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -28,7 +28,7 @@
     <div id="navbar-container">
         <ul id="nav-menu">
             <li class="nav-items" onclick="window.location ='/'">Home</li>
-            <li class="nav-items" onclick="window.location ='/'">About</li>
+            <li class="nav-items" onclick="window.location ='/about'">About</li>
         </ul>
     </div>
 
@@ -156,7 +156,7 @@
             </span>
 
     </div>
-    
+
 </section>
 
 
