--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
    <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="css/toggle.css">
+  <link rel="stylesheet" type="text/css" href="css/loader.css">
 
   <!-- JS -->
   <script type="module" src="./js/index.js"></script>
@@ -53,6 +54,10 @@
         </div>
     </div>
 
+
+    <!-- LOADING SCREEN -->
+
+    <div id="loader" class="loader"></div>
 
     <div class="sun-background"></div>
     <div class="moon-background"></div>
