added ability for users to select their countries of choice

--- a/public/play.html
+++ b/public/play.html
@@ -39,6 +39,7 @@
 <!-- SETTINGS -->
 <section id="settings-box" class="settings-box hide">
 
+    <!-- DIFFICULTY -->
     <!--    <div class="settings-modes-div" >
 
             &lt;!&ndash;            <label for="touch">&ndash;&gt;
@@ -84,6 +85,7 @@
             </ul>
         </div>-->
 
+    <!-- GAME MODE -->
     <div class="settings-modes-div">
 
         <!--            <label for="touch">-->
@@ -121,6 +123,7 @@
         </ul>
     </div>
 
+    <!-- EXTRA GAME MODE -->
     <div class="settings-modes-div">
 
         <!--            <label for="touch">-->
@@ -146,6 +149,24 @@
                 <i class="fa-solid fa-circle-xmark"></i>
                 <span class="hide settings-info">Waldo's previous location(s) is removed from the globe after finding him</span>
             </li>
+        </ul>
+    </div>
+
+    <!-- CUSTOM COUNTRIES -->
+    <div class="settings-modes-div">
+
+        <!--            <label for="touch">-->
+        <span class="settings-box-title">
+                <span class="settings-mode">Custom</span>
+                <span id="settings-country-options">
+                    <span>Countries</span>
+                    <i class="fa-solid fa-earth-europe"></i>
+                </span>
+            </span>
+        <!--            </label>-->
+        <input type="checkbox" ><!--id="touch"-->
+
+        <ul id="country-options-ul" class="slide">
         </ul>
     </div>
     <div class="settings-modes-div">
