added new functionalities

--- a/public/play.html
+++ b/public/play.html
@@ -167,6 +167,15 @@
         <input type="checkbox" ><!--id="touch"-->
 
         <ul id="country-options-ul" class="slide">
+            <li id="select-all-country-li">
+                <p>Select All</p>
+                <div class="item">
+                    <div class="toggle-pill-color">
+                        <input type="checkbox" id="pill3" name="check" onclick="selectAllCountries()">
+                        <label for="pill3"></label>
+                    </div>
+                </div>
+            </li>
         </ul>
     </div>
     <div class="settings-modes-div">
