updated game logic

--- a/public/play.html
+++ b/public/play.html
@@ -231,7 +231,7 @@
                 <div id="show-answer" class="hide blink-text"> Rotate the globe to find the country </div>
                 <div id="show-found-attempt-div" class="show-found-attempt-div">
                     <span id="found-span" > <i class="fa-solid fa-user-secret"></i> : <span id="found-count"></span> </span>
-                    <span>Attempt : <span id="attempt-count"></span> </span>
+                    <span id="attempt-span">Attempt : <span id="attempt-count"></span> </span>
                 </div>
             </div>
 
