--- a/public/play.html
+++ b/public/play.html
@@ -166,7 +166,10 @@
         <!--            </label>-->
         <input type="checkbox" ><!--id="touch"-->
 
+
         <ul id="country-options-ul" class="slide">
+
+            <!-- SELECT ALL OPTION-->
             <li id="select-all-country-li">
                 <p>Select All</p>
                 <div class="item">
@@ -176,7 +179,13 @@
                     </div>
                 </div>
             </li>
+            <!-- SEARCH OPTION-->
+            <li>
+                <input id="search-box" type="text" placeholder="Search Country" oninput="search(this)">
+            </li>
+
         </ul>
+
     </div>
     <div class="settings-modes-div">
 
