added highlight selections

--- a/public/play.html
+++ b/public/play.html
@@ -100,22 +100,22 @@
         <input type="checkbox" ><!--id="touch"-->
 
         <ul id="game-modes-ul" class="slide">
-            <li onclick="changeText(this)">
+            <li onclick="changeText(this)" class="selected-mode">
                 <span>Hints</span>
                 <i title="guess the country with limited hints" class="fa-solid fa-magnifying-glass"></i>
                 <span class="hide settings-info">Find Waldo with limited facts about the country</span>
             </li>
-            <li onclick="changeText(this)">
+            <li onclick="changeText(this)" >
                 <span>Flags</span>
                 <i class="fa-solid fa-flag"></i>
                 <span class="hide settings-info">Find Waldo with the country's flag</span>
             </li>
-            <li onclick="changeText(this)">
+            <li onclick="changeText(this)" >
                 <span>Countries</span>
                 <i class="fa-solid fa-earth-americas"></i>
                 <span class="hide settings-info">Find Waldo with his given location</span>
             </li>
-            <li onclick="changeText(this)">
+            <li onclick="changeText(this)" >
                 <span>Capitals</span>
                 <i class="fa-solid fa-building-columns"></i>
                 <span class="hide settings-info">Find Waldo with the country's given capital</span>
@@ -138,7 +138,7 @@
         <input type="checkbox" ><!--id="touch"-->
 
         <ul id="extra-game-modes-ul" class="slide">
-            <li onclick="changeText(this)">
+            <li onclick="changeText(this)" class="selected-mode">
                 <span>Regular</span>
                 <i class="fa-solid fa-earth-europe"></i>
                 <span class="hide settings-info">Waldo's previous location(s) stays on the globe after finding him</span>
