obfuscated js code

--- a/public/play.html
+++ b/public/play.html
@@ -5,16 +5,16 @@
     <title>Where on Earth is Waldo? | Play</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel="stylesheet" type="text/css" href="css/toggle.css">
-    <link rel="stylesheet" type="text/css" href="css/settings.css">
-    <link rel="stylesheet" type="text/css" href="css/loader.css">
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
+    <link rel="stylesheet" type="text/css" href="/css/toggle.css">
+    <link rel="stylesheet" type="text/css" href="/css/settings.css">
+    <link rel="stylesheet" type="text/css" href="/css/loader.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- JS -->
-    <script type="module" src="./js/play.js"></script>
-    <script type="text/javascript" src="./js/settings.js"></script>
+    <script type="module" src="./js-obs/play.js"></script>
+    <script type="text/javascript" src="./js-obs/settings.js"></script>
 
 </head>
 <body >
