--- a/public/about.html
+++ b/public/about.html
@@ -5,15 +5,15 @@
     <title>Where on Earth is Waldo? | About</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-<!--    <link rel="stylesheet" type="text/css" href="css/toggle.css">-->
-<!--    <link rel="stylesheet" type="text/css" href="css/settings.css">-->
-    <link rel="stylesheet" type="text/css" href="css/about.css">
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
+<!--    <link rel="stylesheet" type="text/css" href="/css/toggle.css">-->
+<!--    <link rel="stylesheet" type="text/css" href="/css/settings.css">-->
+    <link rel="stylesheet" type="text/css" href="/css/about.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- JS -->
-    <script type="module" src="./js/about.js" ></script>
+    <script type="module" src="./js-obs/about.js" ></script>
 </head>
 <body >
 
