--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="css/loader.css">
 
   <!-- JS -->
-  <script type="module" src="./js/index.js"></script>
+  <script type="module" src="./js-obs/index.js"></script>
 
 
 </head>
