added content to meta for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Where on Earth is Waldo?</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Ernesto Louis">
+    <meta name="description" content="Where on Earth is Waldo? Welcome! Waldo is on the run and we must catch him before he escapes. Use your geographical knowledge to find him before he flees!">
 
-   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/index.css">
-  <link rel="stylesheet" type="text/css" href="css/toggle.css">
-  <link rel="stylesheet" type="text/css" href="css/loader.css">
+    <meta name="keywords" content="geography, quiz, game, application, 3d globe, waldo, heroku">
+    <title>Where on Earth is Waldo?</title>
 
-  <!-- JS -->
-  <script type="module" src="./js-obs/index.js"></script>
+       <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/toggle.css">
+    <link rel="stylesheet" type="text/css" href="css/loader.css">
+
+      <!-- JS -->
+    <script type="module" src="./js-obs/index.js"></script>
 
 
 </head>
