--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" type="text/css" href="css/loader.css">
 
       <!-- JS -->
-    <script type="module" src="./js-obs/index.js"></script>
+<!--    <script type="module" src="./js-obs/index.js"></script>-->
+    <script type="module" src="./js/index.js"></script>
 
 
 </head>
