--- a/public/play.html
+++ b/public/play.html
@@ -13,8 +13,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- JS -->
-    <script type="module" src="./js-obs/play.js"></script>
-    <script type="text/javascript" src="./js-obs/settings.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/webxr-polyfill@latest/build/webxr-polyfill.js'></script>
+<!--    <script type="module" src="./js-obs/play.js"></script>-->
+    <script type="module" src="./js/play.js"></script>
+<!--    <script type="text/javascript" src="./js-obs/settings.js"></script>-->
+    <script type="text/javascript" src="./js/settings.js"></script>
 
 </head>
 <body >
