--- a/public/register.html
+++ b/public/register.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Sign Up | Where on Earth is Waldo?</title>
     <link type="text/css" rel="stylesheet" href="css/register.css" />
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
           integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
     <!-- JS -->
     <script type="module" >
 
@@ -15,10 +17,7 @@
 
         let userAuthAPI = new UserAuthAPI();
 
-        // click works for now, better to use 'load'
-        document.body.addEventListener('click', userAuthAPI.verifyToken.bind() );
-
-        document.body.click();
+        window.addEventListener('load', userAuthAPI.verifyToken.bind() );
 
     </script>
 </head>
@@ -124,7 +123,7 @@
 -->
 
 
-<div class="container">
+<div class="container hide">
 
     <!--  NAV BAR  -->
     <nav id="navbar">
