--- a/public/stats.html
+++ b/public/stats.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Stats | Where on Earth is Waldo?</title>
-    <link type="text/css" rel="stylesheet" href="css/nav.css" />
     <link type="text/css" rel="stylesheet" href="css/stats.css" />
+    <link type="text/css" rel="stylesheet" href="css/nav.css" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
           integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -13,24 +14,40 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
           rel="stylesheet">
 
-    <!--  <script type="module" >
+    <!-- JS -->
+    <script type="module" >
 
         import {UserAuthAPI} from './js/userAuthAPI.js'
 
         let userAuthAPI = new UserAuthAPI();
 
-        document.body.addEventListener('click', userAuthAPI.verifyToken.bind() );
+        window.addEventListener('load', userAuthAPI.verifyToken.bind() );
 
-        document.body.click();
+        document.getElementById('logout-nav-item').addEventListener('click', userAuthAPI.logoutUser.bind() )
 
-      </script>-->
+
+    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
 
-    <script type="module" src="./js/Stats.js"></script>
+    <script type="module">
+
+        import {Stats} from "./js/Stats.js";
+
+        let stats = new Stats();
+
+        await stats.updateGraphs();
+        await stats.updateBannerCards();
+        stats.updateNeedToWorkOn();
+        stats.updateTable();
+
+    </script>
 
 </head>
 <body>
+
+
+<div class="container hide">
 
 <!--  NAV BAR  -->
 <nav id="navbar">
@@ -42,8 +59,9 @@
     <div id="navbar-container">
         <ul id="nav-menu">
             <li id="home-nav-item" class="nav-items" onclick="window.location ='/'">Home</li>
-            <li id="login-nav-item" class="nav-items" onclick="window.location ='/login'">Login</li>
+            <li class="nav-items" onclick="window.location ='/play'">Find Waldo</li>
             <li id="about-nav-item" class="nav-items" onclick="window.location ='/about'">About</li>
+            <li id="logout-nav-item" class="nav-items" onclick="window.location ='/logout'">Logout</li>
         </ul>
     </div>
 
@@ -56,7 +74,7 @@
 
     <div class="date">
 <!--        <input type="date">-->
-        <h4>mm / dd / yyyy</h4>
+        <h4 id="date-text"></h4>
     </div>
 
     <div class="insights">
@@ -66,43 +84,43 @@
             <span class="material-icons-sharp">analytics</span>
             <div class="middle" >
                 <div class="left">
-                    <h3>Total Days</h3>
-                    <h1>1 days</h1>
+                    <h3>Streak</h3>
+                    <h1 id="streaks-text"></h1>
                 </div>
-                <div class="progress">
+                <!--<div class="progress">
                     <svg>
                         <circle cx="38" cy="38" r="36"></circle>
                     </svg>
                     <div class="number">
                         <p>81%</p>
                     </div>
-                </div>
+                </div>-->
             </div>
 
-            <small class="text-muted">Last 24 Hours</small>
+<!--            <small class="text-muted">Last 24 Hours</small>-->
 
         </div>
         <!-- END OF SALES -->
 
-        <div class="income" >
+        <div class="games-played" >
 
             <span class="material-icons-sharp">bar_chart</span>
             <div class="middle" >
                 <div class="left">
-                    <h3>Total Days</h3>
-                    <h1>1 days</h1>
+                    <h3>Games Played</h3>
+                    <h1 id="game-played-text"></h1>
                 </div>
-                <div class="progress">
+<!--                <div class="progress">
                     <svg>
                         <circle cx="38" cy="38" r="36"></circle>
                     </svg>
                     <div class="number">
                         <p>62%</p>
                     </div>
-                </div>
+                </div>-->
             </div>
 
-            <small class="text-muted">Last 24 Hours</small>
+<!--            <small class="text-muted">Last 24 Hours</small>-->
 
         </div>
         <!-- END OF SALES -->
@@ -112,20 +130,20 @@
             <span class="material-icons-sharp">stacked_line_chart</span>
             <div class="middle" >
                 <div class="left">
-                    <h3>Total Days</h3>
-                    <h1>1 days</h1>
+                    <h3>Average Percent</h3>
+                    <h1 id="average-percent-text"></h1>
                 </div>
-                <div class="progress">
+                <!--<div class="progress">
                     <svg>
                         <circle cx="38" cy="38" r="36"></circle>
                     </svg>
                     <div class="number">
                         <p>81%</p>
                     </div>
-                </div>
+                </div>-->
             </div>
 
-            <small class="text-muted">Last 24 Hours</small>
+<!--            <small class="text-muted">Last 24 Hours</small>-->
 
         </div>
         <!-- END OF SALES -->
@@ -150,37 +168,30 @@
     <section class="recent">
 
         <div class="recent-orders">
-            <h2>Recent Order</h2>
-            <table>
+            <h2>Recent Activity</h2>
+            <table id="table">
                 <thead>
-                <tr>
-                    <th>Product Name</th>
-                    <th>Product Number</th>
-                    <th>Payment</th>
-                    <th>Status</th>
-                    <th></th>
-                </tr>
+                    <tr>
+                        <th>#</th>
+                        <th>Mode</th>
+                        <th>Misc Mode</th>
+                        <th>Countries Picked</th>
+                        <th>Percent Correct</th>
+                        <th>Date</th>
+                    </tr>
                 </thead>
-                <tbody>
-                <tr>
-                    <td>Foldable Mini Drone</td>
-                    <td>85631</td>
-                    <td>Due</td>
-                    <td class="warning">Pending</td>
-                    <td class="primary">Details</td>
-                </tr>
-                </tbody>
+                <tbody class="table-body"> </tbody>
             </table>
             <a href="#">Show All</a>
         </div>
 
         <!-- END OF TABLE -->
 
-        <div class="sales-analytics">
-            <h2>Sales Analytics</h2>
-            <div class="item online">
+        <div id="need-to-work-on" class="sales-analytics">
+            <h2>Need To Work On</h2>
+            <!--<div class="item online">
                 <div class="icon">
-                    <span class="material-icons-sharp">shopping_cart</span>
+                    <span class="material-icons-sharp">search</span>
                 </div>
                 <div class="right">
                     <div class="info">
@@ -218,7 +229,7 @@
                     <h5 class="success">+25%</h5>
                     <h3>849</h3>
                 </div>
-            </div>
+            </div>-->
 
         </div>
         <!--  END OF RECENT  -->
@@ -229,6 +240,8 @@
 
 </main>
 <!--  END OF MAIN   -->
+
+</div>
 
 <script type="text/javascript" src="./js/Stats.js" ></script>
 
