pushing to heroku

--- a/public/stats.html
+++ b/public/stats.html
@@ -59,7 +59,7 @@
     <div id="navbar-container">
         <ul id="nav-menu">
             <li id="home-nav-item" class="nav-items" onclick="window.location ='/'">Home</li>
-            <li class="nav-items" onclick="window.location ='/play'">Find Waldo</li>
+            <li id="play-nav-item" class="nav-items" onclick="window.location ='/play'">Find Waldo</li>
             <li id="about-nav-item" class="nav-items" onclick="window.location ='/about'">About</li>
             <li id="logout-nav-item" class="nav-items" onclick="window.location ='/logout'">Logout</li>
         </ul>
