--- a/public/about.html
+++ b/public/about.html
@@ -6,6 +6,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/index.css">
+    <link rel="stylesheet" type="text/css" href="/css/nav.css">
 <!--    <link rel="stylesheet" type="text/css" href="/css/toggle.css">-->
 <!--    <link rel="stylesheet" type="text/css" href="/css/settings.css">-->
     <link rel="stylesheet" type="text/css" href="/css/about.css">
@@ -15,6 +16,44 @@
     <!-- JS -->
 <!--    <script type="module" src="./js-obs/about.js" ></script>-->
     <script type="module" src="./js/about.js" ></script>
+
+    <script type="module">
+
+        import {UserAuthAPI} from './js/userAuthAPI.js'
+
+        let userAuthAPI = new UserAuthAPI();
+
+        let userInfo = await userAuthAPI.userInfo();
+
+        // load nav content
+        let navMenu = document.getElementById('nav-menu');
+
+        // if user exits, display their name and remove sign up button
+        if( userInfo.length > 0 ){
+
+            navMenu.innerHTML = `
+
+                <li id="home-nav-item" class="nav-items" onclick="window.location ='/'">Home</li>
+                <li id="play-nav-item" class="nav-items" onclick="window.location ='/play'">Find Waldo</li>
+                <li id="stats-nav-item" class="nav-items" onclick="window.location ='/stats'">Stats</li>
+                <li id="logout-nav-item" class="nav-items">Logout</li>
+
+                `;
+
+            document.getElementById('logout-nav-item').addEventListener('click', userAuthAPI.logoutUser.bind() )
+
+        }else{
+
+            navMenu.innerHTML = `
+
+                <li id="home-nav-item" class="nav-items" onclick="window.location ='/'">Home</li>
+                <li id="play-nav-item" class="nav-items" onclick="window.location ='/play'">Find Waldo</li>
+                <li id="signup-nav-item" class="nav-items" onclick="window.location ='/register'">Sign Up</li>
+                <li id="login-nav-item" class="nav-items" onclick="window.location ='/login'">Login</li>
+            `;
+        }
+
+    </script>
 </head>
 <body >
 
@@ -27,8 +66,8 @@
 
         <div id="navbar-container">
             <ul id="nav-menu">
-                <li class="nav-items" onclick="window.location ='/'">Home</li>
-                <li class="nav-items" onclick="window.location ='/about'">About</li>
+<!--                <li class="nav-items" onclick="window.location ='/'">Home</li>-->
+<!--                <li class="nav-items" onclick="window.location ='/about'">About</li>-->
             </ul>
         </div>
 
