--- a/public/play.html
+++ b/public/play.html
@@ -5,10 +5,10 @@
     <title>Play | Where on Earth is Waldo?</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/play.css">
+    <link rel="stylesheet" type="text/css" href="/css/play.css">
     <link rel="stylesheet" type="text/css" href="/css/toggle.css">
     <link rel="stylesheet" type="text/css" href="/css/settings.css">
-    <link rel="stylesheet" type="text/css" href="css/loader.css">
+    <link rel="stylesheet" type="text/css" href="/css/loader.css">
     <link rel="stylesheet" type="text/css" href="/css/nav.css">
     <link rel="stylesheet" type="text/css" href="/css/skeletonloading.css">
 
