--- a/public/login.html
+++ b/public/login.html
@@ -84,6 +84,8 @@
 
         </div>
 
+        <div id="email-error" class="email-error"> <p class="email-error-text">Please verify your email first</p> </div>
+
         <input id="login-button" type="button" class="login-button" value="Login">
 
         <p class="account-text">Don't have an account? <a class="account-link" href="/register">Sign up</a></p>
