--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Error | Where on Earth is Waldo?</title>
     <link rel="stylesheet" type="text/css" href="/css/404.css"/>
 </head>
 <body>
