--- a/public/about.html
+++ b/public/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Where on Earth is Waldo? | About</title>
+    <title>About | Where on Earth is Waldo?</title>
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/index.css">
