added show all and show less feature to recent activity

--- a/public/play.html
+++ b/public/play.html
@@ -7,7 +7,7 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/play.css">
     <link rel="stylesheet" type="text/css" href="/css/toggle.css">
-    <link rel="stylesheet" type="text/css" href="/css/settings.css">
+    <link rel="stylesheet" type="text/css" href="/css/playSettings.css">
     <link rel="stylesheet" type="text/css" href="/css/loader.css">
     <link rel="stylesheet" type="text/css" href="/css/nav.css">
     <link rel="stylesheet" type="text/css" href="/css/skeletonloading.css">
