--- a/public/stats.html
+++ b/public/stats.html
@@ -182,7 +182,13 @@
                 </thead>
                 <tbody class="table-body"> </tbody>
             </table>
-            <a href="#">Show All</a>
+<!--            <a href="#">Show All</a>-->
+
+            <div class="button-div">
+                <input id="show-all-button" type="button" value="Show All">
+                <input id="show-less-button" class="hide" type="button" value="Show Less">
+            </div>
+
         </div>
 
         <!-- END OF TABLE -->
