added ability for users to change account information

--- a/public/play.html
+++ b/public/play.html
@@ -18,7 +18,7 @@
     <script src='https://cdn.jsdelivr.net/npm/webxr-polyfill@latest/build/webxr-polyfill.js'></script>
 
     <script type="module" src="./js/play.js"></script>
-    <script type="text/javascript" src="./js/settings.js"></script>
+    <script type="text/javascript" src="js/playSettings.js"></script>
 
 
 </head>
