--- a/public/about.html
+++ b/public/about.html
@@ -36,7 +36,7 @@
                 <li id="home-nav-item" class="nav-items" onclick="window.location ='/'">Home</li>
                 <li id="play-nav-item" class="nav-items" onclick="window.location ='/play'">Find Waldo</li>
                 <li id="stats-nav-item" class="nav-items" onclick="window.location ='/stats'">Stats</li>
-                <li id="logout-nav-item" class="nav-items">Logout</li>
+                <li id="settings-nav-item" class="nav-items" onclick="window.location ='/settings'">Settings</li>
 
                 `;
 
